--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,9 @@ header {
   align-items: center;
   gap: 30px;
 }
+header h4 {
+  font-size: 1.4rem;
+}
 .black {
   font-family: "Roboto-black", Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -155,16 +158,15 @@ nav {
   display: flex;
   gap: 30px;
 }
-nav .menu a {
+.menu a {
   font-size: var(--size-p);
   font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
-  
 }
 nav .menu a:hover {
   color: var(--primary-light-10);
 }
 nav .menu a.active {
-  transition: 1s;
+  transition: 0.5s;
   color: var(--primary-light-10);
 }
 @media screen and (min-width: 601px) {
@@ -191,11 +193,9 @@ nav .menu a.active {
   }
 }
 .desplegableMenu {
-  transition: 0.5s ease-out;
   background-color: var(--neutral-dark-20);
   width: 100%;
-  height: 68px;
-  padding: 10px 4%;
+  padding: 16px 4%;
   position: fixed;
   top: 68px;
   right: 0px;
@@ -411,7 +411,7 @@ section {
     margin-bottom: 50px;
   }
   #portfolio{
-    scroll-margin-top: 50px;
+    scroll-margin-top: 100px;
   }
 .carrusel {
   width: 100%;
@@ -509,7 +509,7 @@ section {
   gap: 40px;
 }
 #sobremi{
-  scroll-margin-top: 50px;
+  scroll-margin-top: 100px;
 }
 #sobremi .doscolumnas {
   grid-template-columns: 33% 1fr;
@@ -613,7 +613,7 @@ max-width: 1000px;
   margin: 24px;
 }
 #contacto {
-  scroll-margin-top: 50px;
+  scroll-margin-top: 100px;
 }
 .contacto {
   width: 90%;
@@ -751,4 +751,5 @@ footer a:hover .iconos {
 }
 .ocultar {
   display: none;
+  transition: 2s;
 }
