--- a/css/root2.css
+++ b/css/root2.css
@@ -1,54 +1,55 @@
-:root, :root.dark {
-    --primary-light-00: #40a0f0;
-    --primary-light-10: #82c0f7;
-    --primary-light-20: #bddcfa;
-    --primary-dark-00: #1785e0;
-    --primary-dark-10: #0a66bd;
-    --primary-dark-20: #09529b;
-    --secondary-light-00: #8bb3cf;
-    --secondary-light-10: #b1cddf;
-    --secondary-light-20: #d1e0ec;
-    --secondary-dark-00: #5d83b3;
-    --secondary-dark-10: #5576aa;
-    --secondary-dark-20: #475e86;
-    --neutral-light-00: #9094A0;
-    --neutral-light-10: #D9DADE;
-    --neutral-light-20: #F7F8F8;
-    --neutral-dark-00: #5C606D;
-    --neutral-dark-10: #41444B;
-    --neutral-dark-20: #292A2F;
-    --bg-color: #212026;
-    --text-color: #ffffff;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #8bb3cf 0%, #40a0f0 60%, #57cfff 100%);
-    --gradient-color: #40a0f0;
-    --highlight-color: #57cfff;
-    }
+:root,
+:root.dark {
+  --primary-light-00: #40a0f0;
+  --primary-light-10: #82c0f7;
+  --primary-light-20: #bddcfa;
+  --primary-dark-00: #1785e0;
+  --primary-dark-10: #0a66bd;
+  --primary-dark-20: #09529b;
+  --secondary-light-00: #8bb3cf;
+  --secondary-light-10: #b1cddf;
+  --secondary-light-20: #d1e0ec;
+  --secondary-dark-00: #5d83b3;
+  --secondary-dark-10: #5576aa;
+  --secondary-dark-20: #475e86;
+  --neutral-light-00: #9094a0;
+  --neutral-light-10: #d9dade;
+  --neutral-light-20: #f7f8f8;
+  --neutral-dark-00: #5c606d;
+  --neutral-dark-10: #41444b;
+  --neutral-dark-20: #292a2f;
+  --bg-color: #212026;
+  --text-color: #ffffff;
+  --black: #212026;
+  --white: #ffffff;
+  --gradient: linear-gradient(300deg, #8bb3cf 0%, #40a0f0 60%, #57cfff 100%);
+  --gradient-color: #40a0f0;
+  --highlight-color: #57cfff;
+}
 :root.light {
-    --primary-light-00: #1785e0;
-    --primary-light-10: #0a66bd;
-    --primary-light-20: #09529b;
-    --primary-dark-00: #40a0f0;
-    --primary-dark-10: #82c0f7;
-    --primary-dark-20: #bddcfa;
-    --secondary-light-00: #5d83b3;
-    --secondary-light-10: #5576aa;
-    --secondary-light-20: #475e86;
-    --secondary-dark-00: #8bb3cf;
-    --secondary-dark-10: #b1cddf;
-    --secondary-dark-20: #d1e0ec;
-    --neutral-light-00: #5C606D;
-    --neutral-light-10: #41444B;
-    --neutral-light-20: #292A2F;
-    --neutral-dark-00: #9094A0;
-    --neutral-dark-10: #D9DADE;
-    --neutral-dark-20: #F7F8F8;
-    --bg-color: #ffffff;
-    --text-color: #212026;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #5d83b3 0%, #0a66bd 60%, #57cfff 100%);
-    --gradient-color: #0a66bd;
-    --highlight-color: #57cfff;
-    }
+  --primary-light-00: #1785e0;
+  --primary-light-10: #0a66bd;
+  --primary-light-20: #09529b;
+  --primary-dark-00: #40a0f0;
+  --primary-dark-10: #82c0f7;
+  --primary-dark-20: #bddcfa;
+  --secondary-light-00: #5d83b3;
+  --secondary-light-10: #5576aa;
+  --secondary-light-20: #475e86;
+  --secondary-dark-00: #8bb3cf;
+  --secondary-dark-10: #b1cddf;
+  --secondary-dark-20: #d1e0ec;
+  --neutral-light-00: #5c606d;
+  --neutral-light-10: #41444b;
+  --neutral-light-20: #292a2f;
+  --neutral-dark-00: #9094a0;
+  --neutral-dark-10: #d9dade;
+  --neutral-dark-20: #f7f8f8;
+  --bg-color: #ffffff;
+  --text-color: #212026;
+  --black: #212026;
+  --white: #ffffff;
+  --gradient: linear-gradient(300deg, #5d83b3 0%, #0a66bd 60%, #57cfff 100%);
+  --gradient-color: #0a66bd;
+  --highlight-color: #57cfff;
+}
