--- a/css/root3.css
+++ b/css/root3.css
@@ -1,54 +1,55 @@
-:root, :root.dark {
-    --primary-light-00: #ed8c1c;
-    --primary-light-10: #f1a946;
-    --primary-light-20: #f6ca7b;
-    --primary-dark-00: #ee8529;
-    --primary-dark-10: #df6717;
-    --primary-dark-20: #b94e15;
-    --secondary-light-00: #f09179;
-    --secondary-light-10: #f7baaa;
-    --secondary-light-20: #fbd6cd;
-    --secondary-dark-00: #e56c4e;
-    --secondary-dark-10: #d15131;
-    --secondary-dark-20: #b04125;
-    --neutral-light-00: #9094A0;
-    --neutral-light-10: #D9DADE;
-    --neutral-light-20: #F7F8F8;
-    --neutral-dark-00: #5C606D;
-    --neutral-dark-10: #41444B;
-    --neutral-dark-20: #292A2F;
-    --bg-color: #212026;
-    --text-color: #ffffff;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #f09179 0%, #ed8c1c 60%, #ffde7d 100%);
-    --gradient-color: #ed8c1c;
-    --highlight-color: #ffde7d;
-    }
+:root,
+:root.dark {
+  --primary-light-00: #ed8c1c;
+  --primary-light-10: #f1a946;
+  --primary-light-20: #f6ca7b;
+  --primary-dark-00: #ee8529;
+  --primary-dark-10: #df6717;
+  --primary-dark-20: #b94e15;
+  --secondary-light-00: #f09179;
+  --secondary-light-10: #f7baaa;
+  --secondary-light-20: #fbd6cd;
+  --secondary-dark-00: #e56c4e;
+  --secondary-dark-10: #d15131;
+  --secondary-dark-20: #b04125;
+  --neutral-light-00: #9094a0;
+  --neutral-light-10: #d9dade;
+  --neutral-light-20: #f7f8f8;
+  --neutral-dark-00: #5c606d;
+  --neutral-dark-10: #41444b;
+  --neutral-dark-20: #292a2f;
+  --bg-color: #212026;
+  --text-color: #ffffff;
+  --black: #212026;
+  --white: #ffffff;
+  --gradient: linear-gradient(300deg, #f09179 0%, #ed8c1c 60%, #ffde7d 100%);
+  --gradient-color: #ed8c1c;
+  --highlight-color: #ffde7d;
+}
 :root.light {
-    --primary-light-00: #ee8529;
-    --primary-light-10: #df6717;
-    --primary-light-20: #b94e15;
-    --primary-dark-00: #ed8c1c;
-    --primary-dark-10: #f1a946;
-    --primary-dark-20: #f6ca7b;
-    --secondary-light-00: #e56c4e;
-    --secondary-light-10: #d15131;
-    --secondary-light-20: #b04125;
-    --secondary-dark-00: #f09179;
-    --secondary-dark-10: #f7baaa;
-    --secondary-dark-20: #fbd6cd;
-    --neutral-light-00: #5C606D;
-    --neutral-light-10: #41444B;
-    --neutral-light-20: #292A2F;
-    --neutral-dark-00: #9094A0;
-    --neutral-dark-10: #D9DADE;
-    --neutral-dark-20: #F7F8F8;
-    --bg-color: #ffffff;
-    --text-color: #212026;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #e56c4e 0%, #ee8529 60%, #ffde7d 100%);
-    --gradient-color: #ee8529;
-    --highlight-color: #ffde7d;
-    }
+  --primary-light-00: #ee8529;
+  --primary-light-10: #df6717;
+  --primary-light-20: #b94e15;
+  --primary-dark-00: #ed8c1c;
+  --primary-dark-10: #f1a946;
+  --primary-dark-20: #f6ca7b;
+  --secondary-light-00: #e56c4e;
+  --secondary-light-10: #d15131;
+  --secondary-light-20: #b04125;
+  --secondary-dark-00: #f09179;
+  --secondary-dark-10: #f7baaa;
+  --secondary-dark-20: #fbd6cd;
+  --neutral-light-00: #5c606d;
+  --neutral-light-10: #41444b;
+  --neutral-light-20: #292a2f;
+  --neutral-dark-00: #9094a0;
+  --neutral-dark-10: #d9dade;
+  --neutral-dark-20: #f7f8f8;
+  --bg-color: #ffffff;
+  --text-color: #212026;
+  --black: #212026;
+  --white: #ffffff;
+  --gradient: linear-gradient(300deg, #e56c4e 0%, #ee8529 60%, #ffde7d 100%);
+  --gradient-color: #ee8529;
+  --highlight-color: #ffde7d;
+}
