--- a/css/root4.css
+++ b/css/root4.css
@@ -1,54 +1,55 @@
-:root, :root.dark {
-    --primary-light-00: #d571eb;
-    --primary-light-10: #e8b2f5;
-    --primary-light-20: #f1d4fa;
-    --primary-dark-00: #c755e0;
-    --primary-dark-10: #ad35c4;
-    --primary-dark-20: #9129a2;
-    --secondary-light-00: #b099ec;
-    --secondary-light-10: #cbbef4;
-    --secondary-light-20: #e1dbf9;
-    --secondary-dark-00: #8b61df;
-    --secondary-dark-10: #8651d6;
-    --secondary-dark-20: #763fc2;
-    --neutral-light-00: #9094A0;
-    --neutral-light-10: #D9DADE;
-    --neutral-light-20: #F7F8F8;
-    --neutral-dark-00: #5C606D;
-    --neutral-dark-10: #41444B;
-    --neutral-dark-20: #292A2F;
-    --bg-color: #212026;
-    --text-color: #ffffff;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #8b61df 0%, #d571eb 60%, #FFCC70 100%);
-    --gradient-color: #d571eb;
-    --highlight-color: #FFCC70;
-    }
+:root,
+:root.dark {
+  --primary-light-00: #d571eb;
+  --primary-light-10: #e8b2f5;
+  --primary-light-20: #f1d4fa;
+  --primary-dark-00: #c755e0;
+  --primary-dark-10: #ad35c4;
+  --primary-dark-20: #9129a2;
+  --secondary-light-00: #b099ec;
+  --secondary-light-10: #cbbef4;
+  --secondary-light-20: #e1dbf9;
+  --secondary-dark-00: #8b61df;
+  --secondary-dark-10: #8651d6;
+  --secondary-dark-20: #763fc2;
+  --neutral-light-00: #9094a0;
+  --neutral-light-10: #d9dade;
+  --neutral-light-20: #f7f8f8;
+  --neutral-dark-00: #5c606d;
+  --neutral-dark-10: #41444b;
+  --neutral-dark-20: #292a2f;
+  --bg-color: #212026;
+  --text-color: #ffffff;
+  --black: #212026;
+  --white: #ffffff;
+  --gradient: linear-gradient(300deg, #8b61df 0%, #d571eb 60%, #ffcc70 100%);
+  --gradient-color: #d571eb;
+  --highlight-color: #ffcc70;
+}
 :root.light {
-    --primary-light-00: #c755e0;
-    --primary-light-10: #ad35c4;
-    --primary-light-20: #9129a2;
-    --primary-dark-00: #d571eb;
-    --primary-dark-10: #e8b2f5;
-    --primary-dark-20: #f1d4fa;
-    --secondary-light-00: #8b61df;
-    --secondary-light-10: #8651d6;
-    --secondary-light-20: #763fc2;
-    --secondary-dark-00: #b099ec;
-    --secondary-dark-10: #cbbef4;
-    --secondary-dark-20: #e1dbf9;
-    --neutral-light-00: #5C606D;
-    --neutral-light-10: #41444B;
-    --neutral-light-20: #292A2F;
-    --neutral-dark-00: #9094A0;
-    --neutral-dark-10: #D9DADE;
-    --neutral-dark-20: #F7F8F8;
-    --bg-color: #ffffff;
-    --text-color: #212026;
-    --black: #212026;
-    --white: #ffffff;
-    --gradient: linear-gradient(300deg, #763fc2 0%, #c755e0 60%, #FFCC70 100%);
-    --gradient-color: #c755e0;
-    --highlight-color: #FFCC70;
-    }
+  --primary-light-00: #c755e0;
+  --primary-light-10: #ad35c4;
+  --primary-light-20: #9129a2;
+  --primary-dark-00: #d571eb;
+  --primary-dark-10: #e8b2f5;
+  --primary-dark-20: #f1d4fa;
+  --secondary-light-00: #8b61df;
+  --secondary-light-10: #8651d6;
+  --secondary-light-20: #763fc2;
+  --secondary-dark-00: #b099ec;
+  --secondary-dark-10: #cbbef4;
+  --secondary-dark-20: #e1dbf9;
+  --neutral-light-00: #5c606d;
+  --neutral-light-10: #41444b;
+  --neutral-light-20: #292a2f;
+  --neutral-dark-00: #9094a0;
+  --neutral-dark-10: #d9dade;
+  --neutral-dark-20: #f7f8f8;
+  --bg-color: #ffffff;
+  --text-color: #212026;
+  --black: #212026;
+  --white: #ffffff;
+  --gradient: linear-gradient(300deg, #763fc2 0%, #c755e0 60%, #ffcc70 100%);
+  --gradient-color: #c755e0;
+  --highlight-color: #ffcc70;
+}
