--- a/css/stylecopia.css
+++ b/css/stylecopia.css
@@ -286,8 +286,8 @@ nav .menu a.active {
 }
 #hero {
   position: relative;
-  background-image: var(--gradient2);
-  background-color: var(--gradient-color2);
+  background-image: var(--gradient);
+  background-color: var(--gradient-color);
   height: 100vh;
   width: 100%;
   display: flex;
@@ -312,14 +312,14 @@ nav .menu a.active {
   }
 }
 #hero h1 {
-  color: var(--primary-light-20);
+  color: var(--primary-dark-20);
   margin-bottom: 20px;
 }
 .saludo {
   padding-left: 0.8%;
   text-transform: uppercase;
   font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
-  font-size: clamp(0.8rem, 1.2vw + 0.8rem, 5.5vw);
+  font-size: clamp(0.8rem, 1.5rem, 5.5vw);
 }
 @media screen and (max-width: 280px) {
   .borrarMiniMovil{
@@ -384,7 +384,7 @@ nav .menu a.active {
 }
 .subtitulo {
   text-align: center;
-  color: var(--text-color);
+  color: var(--bg-color);
   padding: 0 10%;
 }
 .flecha {
@@ -394,8 +394,8 @@ nav .menu a.active {
 .flechaDown {
   height: 60px;
   width: 80px;
-  background-color: var(--primary-light-20);
-  /* position: absolute; */
+  background-color: var(--primary-dark-20);
+  position: absolute;
   left: 50%;
   bottom: 20px;
   transform: translateX(-50%);
