--- a/css/animaciones.css
+++ b/css/animaciones.css
@@ -177,21 +177,6 @@
     scale: 100%;
   }
 }
-@keyframes aparicionMarco {
-  0% {
-    opacity: 0;
-    scale: 20%;
-  }
-  30% {
-    opacity: 0;
-    scale: 20%;
-  }
-
-  100% {
-    opacity: 1;
-    scale: 100%;
-  }
-}
 .elementos-aparicion {
   view-timeline-name: --image;
   view-timeline-axis: block;
@@ -211,6 +196,21 @@
 
   animation-range: entry 25% cover 40%;
   animation-fill-mode: both;
+}
+@keyframes aparicionMarco {
+  0% {
+    opacity: 0;
+    scale: 20%;
+  }
+  30% {
+    opacity: 0;
+    scale: 20%;
+  }
+
+  100% {
+    opacity: 1;
+    scale: 100%;
+  }
 }
 .animacion-marcos {
   view-timeline-name: --marcos;
@@ -360,6 +360,8 @@
 }
 .aparicionTexto {
   animation: aparicionTexto 0.8s ease-in-out;
+  animation-fill-mode: both;
+
 }
 .aparicionTexto2 {
   animation: fade 0.8s ease-in-out;
@@ -498,13 +500,33 @@
 
 @keyframes aparicionIzquierdaExtra {
   0% {
-    margin-left: -500px;
+    margin-left: -100vw;
   }
   100% {
   }
 }
 .aparicionIzquierdaExtra {
-  animation: aparicionIzquierdaExtra 1s ease-in-out;
-  animation-delay: 0.5s;
+  animation: aparicionIzquierdaExtra 1.2s ease-in-out;
+  animation-delay: 0.1s;
+  animation-fill-mode: both;
+}
+@keyframes portfolio {
+  0% {
+    opacity: 0%;
+    transform: translateX(-20%);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateX(0%);
+  }
+}
+.aparicionTextoPortfolio {
+  view-timeline-name: --div;
+  view-timeline-axis: block;
+
+  animation-timeline: --div;
+  animation-name: portfolio;
+
+  animation-range: entry 5% cover 25%;
   animation-fill-mode: both;
 }
