--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ section {
 #portfolio {
   scroll-margin-top: 100px;
 }
+
 .carrusel {
   width: 100%;
   height: 300px;
@@ -450,8 +451,7 @@ section {
 .carrusel img:last-child {
   padding-right: 5vw;
 }
-
-#portfolio h3 {
+.frase {
   margin: 0 5%;
   text-align: center;
   padding-bottom: 40px;
