--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ section {
 
 .carrusel {
   width: 100%;
-  height: 300px;
+  height: 413px;
   position: relative;
   overflow: hidden;
 }
@@ -435,8 +435,16 @@ section {
   left: 0;
 }
 .interiorCarrusel img {
-  height: 300px;
+  height: 413px;
   width: auto;
+}
+@media screen and (max-width: 768px) {
+  .interiorCarrusel img {
+    height: 300px;
+  }
+  .carrusel {
+    height: 300px;
+  }
 }
 .carrusel img:first-child {
   padding-left: 5vw;
