--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 }
 h1 {
   font-size: var(--size-h1);
-  font-family: "Roboto-black", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-black", Geneva, Tahoma, sans-serif;
 }
 .textoDegradado {
   color: var(--primary-light-00);
@@ -59,39 +59,39 @@ h1 {
 }
 h2 {
   font-size: var(--size-h2);
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-bold", Geneva, Tahoma, sans-serif;
 }
 h3 {
   font-size: var(--size-h3);
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-bold", Geneva, Tahoma, sans-serif;
 }
 h4 {
   color: var(--primary-light-00);
   font-size: var(--size-h4);
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-bold", Geneva, Tahoma, sans-serif;
 }
 h5 {
-  font-weight: normal;
+  font-weight: 400;
   font-size: var(--size-h5);
-  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Geneva, Tahoma, sans-serif;
 }
 p {
   font-size: var(--size-p);
-  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Geneva, Tahoma, sans-serif;
   line-height: 1.4;
   margin: 10px 0;
 }
 .bold {
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-bold", Geneva, Tahoma, sans-serif;
 }
 strong {
-  font-weight: normal;
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 400;
+  font-family: "Roboto-bold", Geneva, Tahoma, sans-serif;
 }
 a {
   text-decoration: none;
   color: var(--text-color);
-  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Geneva, Tahoma, sans-serif;
 }
 a:hover {
   color: var(--primary-light-10);
@@ -125,10 +125,10 @@ header h4 {
   font-size: 1.4rem;
 }
 .black {
-  font-family: "Roboto-black", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-black", Geneva, Tahoma, sans-serif;
 }
 .normal {
-  font-family: "Roboto", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Geneva, Tahoma, sans-serif;
 }
 @media screen and (max-width: 300px) {
   .nombreGrande{
@@ -151,7 +151,7 @@ nav {
 }
 .menu a {
   font-size: var(--size-p);
-  font-family: "Roboto-bold", Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto-bold", Geneva, Tahoma, sans-serif;
 }
 nav .menu a:hover {
   color: var(--primary-light-10);
@@ -216,14 +216,14 @@ nav .menu a.active {
   top: 14px;
   right: 14px;
   display: flex;
-  padding: 8px 14px 8px 14px;
+  padding: 8px 14px;
   gap: 16px;
   border-radius: 20px;
 }
 @media screen and (max-width: 340px) {
   #selectorColores {
     gap: 4px;
-    padding: 8px 10px 8px 10px;
+    padding: 8px 10px;
 
   }
 }
