--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,9 @@ nav .menu a.active {
   position: relative;
   background-image: var(--gradient2);
   background-color: var(--gradient-color2);
-  height: 100vh;
+  min-height: 100vh;
+    min-height: fill-available;
+    min-height: -webkit-fill-available;
   width: 100%;
   display: flex;
   flex-direction: column;
