--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ body {
   width: 100%;
   max-width: 100vw;
   height: 100%;
-  min-height: 100vh;
   color: var(--text-color);
 }
 #wrapper section {
@@ -286,7 +285,7 @@ nav .menu a.active {
   position: relative;
   background-image: var(--gradient2);
   background-color: var(--gradient-color2);
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
   display: flex;
   flex-direction: column;
