--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ nav .menu a.active {
   position: relative;
   background-image: var(--gradient2);
   background-color: var(--gradient-color2);
+  min-height: 100vh;
   min-height: 100dvh;
   width: 100%;
   display: flex;
