--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,8 @@ section {
   text-align: center;
 }
 #habilidades p {
-  margin: 0 auto;
+  margin-left:  auto;
+  margin-right: auto;
   text-align: center;
   width: 90%;
 }
