--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,8 @@ section {
 .carrusel {
   width: 100%;
   height: 413px;
-  max-height: 40vh;
+  min-height: 40vh;
+  min-height: 40dvh;
   position: relative;
   overflow: hidden;
 }
@@ -438,7 +439,8 @@ section {
 }
 .interiorCarrusel img {
   height: 413px;
-  max-height: 40vh;
+  min-height: 40vh;
+  min-height: 40dvh;
   width: auto;
 }
 @media screen and (max-width: 1000px) {
