--- a/css/style.css
+++ b/css/style.css
@@ -295,8 +295,7 @@ nav .menu a.active {
   overflow: hidden;
 }
 .textHero {
-  padding: 10px;
-  padding-top: 60px;
+  padding: 60px 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -424,8 +423,8 @@ section {
 .carrusel {
   width: 100%;
   height: 413px;
-  min-height: 40vh;
-  min-height: 40dvh;
+  max-height: 40vh;
+  max-height: 40dvh;
   position: relative;
   overflow: hidden;
 }
@@ -439,8 +438,8 @@ section {
 }
 .interiorCarrusel img {
   height: 413px;
-  min-height: 40vh;
-  min-height: 40dvh;
+  max-height: 40vh;
+  max-height: 40dvh;
   width: auto;
 }
 @media screen and (max-width: 1000px) {
