--- a/css/style.css
+++ b/css/style.css
@@ -860,6 +860,11 @@ form button {
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+  font-weight: 600;
+  color: var(--bg-color);
+}
+form button:hover {
+  background-color: var(--primary-light-20);
 }
 .h-captcha {
   display: flex;
